--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
             <strong>FBI ANALYSE RAPPORT</strong><br>
             ---------------------------------<br>
             Datum: Vandaag<br>
-            Status: Gekraakt<br><br>
-            Goed gedaan agenten. Jullie hebben de digitale firewall doorbroken.<br><br>
-            Het systeem is echter nog steeds fysiek vergrendeld.<br>
+            Status: sleutel<br><br>
+            Goed gedaan agenten.Wij hebben de sleutel perfect nagemaakt.<br><br>
+            Het sleuteltje moet echter nog steeds goed vergrendeld zijn.<br>
             We hebben de locatie van de sleutel getraceerd via de beveiligingscamera's.<br><br>
             <strong>LOCATIE DATA:</strong><br>
-            "Kijk in de lade onder de printer."<br><br>
-            Code: <strong>8822</strong>
+            "Kijk in de lades"<br><br>
+            Code: <strong>293</strong>
         </div>
     </div>
 
@@ -199,13 +199,9 @@
             <strong>FBI ANALYSE RAPPORT</strong><br>
             ---------------------------------<br>
             Datum: Vandaag<br>
-            Status: Gekraakt<br><br>
-            Goed gedaan agenten. Jullie hebben de digitale firewall doorbroken.<br><br>
-            Het systeem is echter nog steeds fysiek vergrendeld.<br>
-            We hebben de locatie van de sleutel getraceerd via de beveiligingscamera's.<br><br>
-            <strong>LOCATIE DATA:</strong><br>
-            "In de kast achter de deur van lokaal 3B."<br><br>
-            Code: <strong>1947</strong>
+            Status: kluis<br><br>
+            De bank heeft een leuke boek!<br><br>
+            Vind hem.<br>
         </div>
     </div>
 
@@ -215,16 +211,7 @@
             <div style="background:#d74040; width:20px; text-align:center; cursor:pointer;" onclick="closeWindow('file-window-3')">X</div>
         </div>
         <div class="window-content">
-            <strong>FBI ANALYSE RAPPORT</strong><br>
-            ---------------------------------<br>
-            Datum: Vandaag<br>
-            Status: Gekraakt<br><br>
-            Goed gedaan agenten. Jullie hebben de digitale firewall doorbroken.<br><br>
-            Het systeem is echter nog steeds fysiek vergrendeld.<br>
-            We hebben de locatie van de sleutel getraceerd via de beveiligingscamera's.<br><br>
-            <strong>LOCATIE DATA:</strong><br>
-            "Onder de derde stoel links in de vergaderzaal."<br><br>
-            Code: <strong>5529</strong>
+            <strong>File currupted!</strong><br>
         </div>
     </div>
 
