--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             Het sleuteltje moet echter nog steeds goed vergrendeld zijn.<br>
             We hebben de locatie van de sleutel getraceerd via de beveiligingscamera's.<br><br>
             <strong>LOCATIE DATA:</strong><br>
-            "Kijk in de lades"<br><br>
+            "Kijk op de kast"<br><br>
             Code: <strong>293</strong>
         </div>
     </div>
